Thu May 06 02:25:33 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_positionlist.cc,
	  backends/quartz/quartz_utils.h: Added SON_OF_QUARTZ define to
	  disable incompatible changes to database formats by default, and
	  use it to control the docid encoding for keys such that we're always
	  inserting at the end of the table when added new documents.

Thu May 06 02:23:02 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Improved a FIXME comment.

Thu May 06 00:32:17 BST 2004  Olly Betts <olly@survex.com>

	* extra/queryparsertest.cc: Added test case for `term NOT "a phrase'.

Thu May 06 00:28:32 BST 2004  Olly Betts <olly@survex.com>

	* common/omdebug.cc,common/omdebug.h: Renamed OmTimer class used
	  internally by the --enable-debug=profile code to
	  Xapian::Internal::Timer.

Wed May 05 13:59:47 BST 2004  Olly Betts <olly@survex.com>

	* docs/scalability.html: Reworded to remove use of first person.

Mon May 03 21:42:05 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Improved wording of a FIXME comment.

Sun May 02 10:18:55 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Improved a couple of comments.

Sat May 01 04:42:43 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/quartz_table.cc: Reopening the readonly version
	  of a writable Btree is now more efficient.

Sat May 01 01:41:24 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Added up-to-date success reports for x86-openbsd and
	  x86-solaris.

Fri Apr 30 04:05:15 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/: Don't delete and reload the Btree_base just after
	  saving it - instead reuse the existing Btree_base object.

Fri Apr 30 02:41:50 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Clean up new code in Btree::commit()
	  from last change.

Thu Apr 29 22:41:05 BST 2004  Olly Betts <olly@survex.com>
